--- a/index.html
+++ b/index.html
@@ -149,19 +149,16 @@
 </p>
 
 <p> <a href="https://www.nvidia.com/en-us/research/"><img src="./pics/nvidia.png" height="70px" style="margin-bottom:-6px"></a>
-	<a href="https://research.google/"><img src="./pics/google_logo.png" height="50px" style="margin-bottom:2px"></a>&nbsp
-	<a href="https://trustedai.usc.edu/"><img src="./pics/Amazon-logo.png" height="40px" style="margin-bottom:3px"></a>&nbsp
+	<a href="https://research.google/"><img src="./pics/google_logo.png" height="50px" style="margin-bottom:2px"></a>&nbsp &nbsp &nbsp
+	<!-- <a href="https://trustedai.usc.edu/"><img src="./pics/Amazon-logo.png" height="40px" style="margin-bottom:3px"></a>&nbsp -->
 	<a href="https://www.microsoft.com/en-us/research/"><img src="./pics/microsoft_logo.jfif" height="55px" style="margin-bottom:-1px"></a>&nbsp &nbsp &nbsp
-	<a href="https://www.uii-ai.com/en/"><img src="./pics/UII_logo33.png" height="55px" style="margin-bottom:-1px"></a>&nbsp &nbsp &nbsp
+	<a href="https://www.uii-ai.com/en/"><img src="./pics/UII_logo33.png" height="55px" style="margin-bottom:-1px"></a>&nbsp &nbsp &nbsp &nbsp
 	<a href="http://flexiv.com/"><img src="./pics/flexiv_logo.jfif" height="60px" style="margin-bottom:-3px"></a>
-	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
 	<a href="https://svl.stanford.edu/"><img src="./pics/stanford.png" height="76px" style="margin-bottom:-9px"></a>&nbsp &nbsp &nbsp
 	<a href="https://www.cs.usc.edu/"><img src="./pics/USC_logo.png" height="60px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
 	<a href="http://en.sjtu.edu.cn/"><img src="./pics/sjtu_logo.png" height="60px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
 	<a href="http://www.en.sdu.edu.cn/"><img src="./pics/sdu_logo.jpg" height="62px" style="margin-bottom:-3px"></a>
-
-
-
 </p>
 
 
@@ -217,7 +214,7 @@
 <h2><a id="C2" ><font color="#CB4335">News & Updates</font></a></h2>
 <ul>
 
-<div style="height:400px;width:fit-content;overflow:auto;background:#FFFFFF;">
+<div style="height:300px;width:fit-content;overflow:auto;background:#FFFFFF;">
 
 	<li>
 		<p>[2025/06/01] We have released <a  target="_blank" href="https://github.com/nvidia-cosmos/cosmos-predict2">Cosmos Predict2</a>, SOTA world foundation model for robots and autonomous vehicles!
@@ -238,13 +235,13 @@
 		<p>[2024/11/11] We have released <a  target="_blank" href="https://arxiv.org/abs/2411.07126">Edify Image</a>, a family of diffusion models for photorealistic image generation!
 		    </p>
 	<li>	
-		<p>[2024/7/30] <b>GenUSD</b> is proudly featured in the <a  target="_blank" href="https://blogs.nvidia.com/blog/real-time-3d-generative-ai-research-siggraph-2024/?ncid=so-twit-353134-vt36&linkId=100000277255797">Real-Time Live! at SIGGRAPH 2024</a> .
+		<p>[2024/7/30] <a  target="_blank" href="https://blogs.nvidia.com/blog/real-time-3d-generative-ai-research-siggraph-2024/?ncid=so-twit-353134-vt36&linkId=100000277255797">GenUSD</a> is proudly featured in the <a  target="_blank" href="https://blogs.nvidia.com/blog/real-time-3d-generative-ai-research-siggraph-2024/?ncid=so-twit-353134-vt36&linkId=100000277255797">Real-Time Live! at SIGGRAPH 2024</a> .
 		    </p>
 	<li>
-		<p>[2024/5/15] One paper, <b>BEHAVIOR Vision Suite</b> for Customizable Dataset Generation, is accepted by <b>CVPR 2024 (Highlight)</b>. Code released.
+		<p>[2024/5/15] One paper, <a  target="_blank" href="https://behavior-vision-suite.github.io/">BEHAVIOR Vision Suite</a> for Customizable Dataset Generation, is accepted by <b>CVPR 2024 (Highlight)</b>. Code released.
 		    </p>
 	<li>	
-		<p>[2024/5/1] One paper, <b>LLM Agent Tool Use</b> for 2D/3D captioning, is accepted by <b>CVPR 2024</b>.
+		<p>[2024/5/1] One paper, <a  target="_blank" href="https://research.nvidia.com/labs/dir/vfc/">Visual Fact Checker</a>, LLM Agent Tool Use for 2D/3D captioning, is accepted by <b>CVPR 2024</b>.
 			</p>
 	<li>
 		<p>[2023/12/21] We release the paper and code of <a  target="_blank" href="https://briannlongzhao.github.io/DreamDistribution/">DreamDistribution </a> for personalized 2D/3D generation.
@@ -424,7 +421,75 @@
 
 </table>
 
-<h2><a id="C3" ><font color="#CB4335">Selected Publications</font></a> [<a href="https://scholar.google.com/citations?hl=en&user=QhjGr4oAAAAJ=en&user=QhjGr4oAAAAJ">Google Scholar</a>]</h2>
+<h2><font color="#CB4335">Research Highlights</font></h2>
+
+<div style="display: flex; justify-content: space-between; gap: 20px; margin: 30px 0; align-items: flex-start;">
+	<!-- Panel 1: Multimodal Foundation Model for Physical AI -->
+	<div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
+		<h3 style="color: rgb(0, 0, 0); margin: 10px 0 20px 0; font-size: 16px; font-weight: bold;">Multimodal Foundation Model for Physical AI</h3>
+		<!-- <p style="margin: 5px 0; font-size: 13px; color: #666;">World models for physical AI</p>
+		<p style="margin: 5px 0; font-size: 11px; color: #888;"><strong style="color:rgb(20, 115, 204)">Best AI + Best overall of CES 2025</strong></p> -->
+		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
+			<strong>Pre-training:</strong> 
+			<a target="_blank" href="https://github.com/nvidia-cosmos/cosmos-predict2" style="color:rgb(20, 115, 204)">Cosmos Predict2 </a>  | 
+			<a target="_blank" href="https://www.nvidia.com/en-us/ai/cosmos/" style="color:rgb(20, 115, 204)">Cosmos-Predict1 </a><br>
+
+			<strong>Post-training:</strong> 
+			<a target="_blank" href="https://research.nvidia.com/labs/dir/cosmos-transfer1/" style="color:rgb(20, 115, 204)">Cosmos-Transfer1 </a>
+		</p>
+		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
+			&nbsp;<br>&nbsp;
+		</p>
+		<video width="100%" height="180" controls autoplay loop muted style="margin-bottom: 10px;">
+			<source src="pics/Cosmos.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+		<!-- <h4 style="color: rgb(20, 115, 204); margin: 10px 0; font-size: 16px;">Cosmos</h4> -->
+	</div>
+
+	<!-- Panel 2: Physical Scene Generation and Understanding -->
+	<div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
+		<h3 style="color: rgb(0, 0, 0); margin: 10px 0 20px 0; font-size: 16px; font-weight: bold;">Physical Scene Generation & Understanding</h3>
+		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
+			<strong>Generation:</strong> 
+			<a target="_blank" href="https://blogs.nvidia.com/blog/real-time-3d-generative-ai-research-siggraph-2024/?ncid=so-twit-353134-vt36&linkId=100000277255797" style="color:rgb(20, 115, 204)">GenUSD </a>  | 
+			<a target="_blank" href="https://arxiv.org/abs/2411.07135" style="color:rgb(20, 115, 204)">Edify3D </a> | 
+			<a target="_blank" href="https://arxiv.org/abs/2411.07126" style="color:rgb(20, 115, 204)">Edify Image </a> | 
+			<a target="_blank" href="https://behavior-vision-suite.github.io/" style="color:rgb(20, 115, 204)">BEHAVIOR Vision Suite </a> | 
+			<a target="_blank" href="https://arxiv.org/abs/2312.05277" style="color:rgb(20, 115, 204)">3D Copy Paste </a> | 
+			<a target="_blank" href="https://research.nvidia.com/labs/dir/scenethesis/" style="color:rgb(20, 115, 204)">Scenethesis </a> | 
+			<a target="_blank" href="https://arxiv.org/abs/2506.00742" style="color:rgb(20, 115, 204)">ArtiScene </a><br>
+
+			<strong>Understanding:</strong> 
+			<a target="_blank" href="https://arxiv.org/abs/2404.19752" style="color:rgb(20, 115, 204)">Visual Fact Checker </a> | 
+			<a target="_blank" href="https://describe-anything.github.io/" style="color:rgb(20, 115, 204)">Describe Anything </a>
+		<video width="100%" height="180" controls autoplay loop muted style="margin-bottom: 10px;">
+			<source src="pics/edify-3d.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+
+	<!-- Panel 3: Controllable Generation -->
+	<div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
+		<h3 style="color: rgb(0, 0, 0); margin: 10px 0 20px 0; font-size: 16px; font-weight: bold;">Controllable Generation</h3>
+		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
+			<a target="_blank" href="https://briannlongzhao.github.io/DreamDistribution/" style="color:rgb(20, 115, 204)">DreamDistribution </a> | 
+			<a target="_blank" href="https://arxiv.org/abs/2411.07126" style="color:rgb(20, 115, 204)">Neural-Sim </a> | 
+			<a target="_blank" href="https://arxiv.org/abs/2405.09546" style="color:rgb(20, 115, 204)">Group-Supervised Learning </a> | 
+			<a target="_blank" href="https://arxiv.org/pdf/2206.09592.pdf" style="color:rgb(20, 115, 204)">DALL-E for Detection </a> | 
+			<a target="_blank" href="https://arxiv.org/abs/2003.08526" style="color:rgb(20, 115, 204)">Pose Augmentation </a> 
+		</p>
+		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
+			&nbsp;<br>&nbsp;
+		</p>
+			<video width="100%" height="180" controls autoplay loop muted style="margin-bottom: 10px;">
+			<source src="pics/dreamdistribution.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+</div>
+
+<h2><a id="C3" ><font color="#CB4335">Selected Publications</font></a> [<a href="https://scholar.google.com/citations?hl=en&user=QhjGr4oAAAAJ=en&user=QhjGr4oAAAAJ" style="color:rgb(20, 115, 204)">Google Scholar</a>]</h2>
 
 <table id="tbPublications" width="100%">
 	<tr>
@@ -436,18 +501,13 @@
 		</td>
 		<td>
 			<b>Cosmos-Transfer1: Conditional World Generation with Adaptive Multimodal Control</b><br>
-<br>
-			Core contributor<br>
-		<b>White Paper</b>.
+			<br>NVIDIA (<b>Yunhao Ge</b>: core contributor)<br>
 		<p></p>
 			<p>[<a href="https://arxiv.org/abs/2503.14492" target="_blank">paper</a>]
 			[<a href="https://research.nvidia.com/labs/dir/cosmos-transfer1/" target="_blank">project page</a>]
 			[<a href="https://github.com/nvidia-cosmos/cosmos-transfer1" target="_blank">code</a>]
 			[<a href="https://huggingface.co/collections/nvidia/cosmos-transfer1-67c9d328196453be6e568d3e" target="_blank">huggingface</a>]
 			[<a href="https://www.youtube.com/watch?v=0Yr5SdrVnxc" target="_blank">video</a>]
-<!--			[<a href="https://zhuanlan.zhihu.com/p/380264276" target="_blank">知乎</a>]-->
-<!--			[<a href="https://mp.weixin.qq.com/s/FhQsi7twHkGskcE5fshOxA" target="_blank">机器之心</a>]-->
-<!--			[<a href="https://mp.weixin.qq.com/s/DqYlLVMggNEWuN76-OXJmQ" target="_blank">AI科技评论</a>]-->
 			</p>
 		</td>
 	</tr>
@@ -462,21 +522,71 @@
 		</td>
 		<td>
 			<b>Cosmos: World Foundation Model Platform for Physical AI</b><br>
-<br>
-			Core contributor<br>
-		<b>White Paper</b>.
+		<br>NVIDIA (<b>Yunhao Ge</b>: core contributor)<br>
+		<p></p>
+		<p><strong style="color:rgb(20, 115, 204)">Best AI + Best overall of CES 2025</strong></p>
+		<!-- <b>White Paper</b>. -->
 		<p></p>
 			<p>[<a href="https://arxiv.org/abs/2501.03575" target="_blank">paper</a>]
 			[<a href="https://research.nvidia.com/labs/dir/cosmos1/" target="_blank">project page</a>]
 			[<a href="https://github.com/NVIDIA/Cosmos" target="_blank">code</a>]
 			[<a href="https://huggingface.co/collections/nvidia/cosmos-6751e884dc10e013a0a0d8e6" target="_blank">huggingface</a>]
 			[<a href="https://www.youtube.com/watch?v=9Uch931cDx8" target="_blank">video</a>]
+			[<a href="https://build.nvidia.com/nvidia/cosmos-predict1-7b" target="_blank">Demo API</a>]
+<!--			[<a href="https://mp.weixin.qq.com/s/FhQsi7twHkGskcE5fshOxA" target="_blank">机器之心</a>]-->
+<!--			[<a href="https://mp.weixin.qq.com/s/DqYlLVMggNEWuN76-OXJmQ" target="_blank">AI科技评论</a>]-->
+			</p>
+		</td>
+	</tr>
+
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+
+	<tr>
+		<td width="306">
+<!--		<img src="pics/3dcopy.png" width="285px" style="box-shadow: 4px 4px 8px #888">-->
+			<video width="285" autoplay loop muted playsinline style="box-shadow: 4px 4px 8px #888">
+				<source src="pics/DAM.mov" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+		</td>
+		<td>
+			<b>Describe Anything: Detailed Localized Image and Video Captioning</b><br>
+<br>
+<!--		<br>-->
+<!--			<b>TL;DR:</b> A new paradigm for automatic context image generation at scale with DALL-E (generative models) for downstream takes (discriminative models). <br>-->
+<!--			<br>-->
+		Long Lian, Yifan Ding, <b>Yunhao Ge</b>, Sifei Liu, Hanzi Mao, Boyi Li, Marco Pavone, Ming-Yu Liu, Trevor Darrell, Adam Yala, Yin Cui<br>
+		<b>ICCV 2025</b>.
+		<p></p>
+			<p>[<a href="https://arxiv.org/abs/2504.16072" target="_blank">paper</a>]
+			[<a href="https://github.com/NVlabs/describe-anything" target="_blank">code</a>]
+			[<a href="https://describe-anything.github.io/" target="_blank">project page</a>]
+			[<a href="https://huggingface.co/spaces/nvidia/describe-anything-model-demo" target="_blank">demo</a>]
 <!--			[<a href="https://zhuanlan.zhihu.com/p/380264276" target="_blank">知乎</a>]-->
 <!--			[<a href="https://mp.weixin.qq.com/s/FhQsi7twHkGskcE5fshOxA" target="_blank">机器之心</a>]-->
 <!--			[<a href="https://mp.weixin.qq.com/s/DqYlLVMggNEWuN76-OXJmQ" target="_blank">AI科技评论</a>]-->
 			</p>
 		</td>
 	</tr>
+
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+
 
 	<tr>
 		<td width="306">
@@ -487,9 +597,7 @@
 		</td>
 		<td>
 			<b>Edify 3D: Scalable High-Quality 3D Asset Generation</b><br>
-<br>
-			Core contributor<br>
-		<b>White Paper</b>.
+			<br>NVIDIA (<b>Yunhao Ge</b>: core contributor)<br>
 		<p></p>
 			<p>[<a href="https://arxiv.org/abs/2411.07135" target="_blank">paper</a>]
 			[<a href="https://research.nvidia.com/labs/dir/edify-3d/" target="_blank">project page</a>]
@@ -509,9 +617,7 @@
 		</td>
 		<td>
 			<b>Edify Image: High-Quality Image Generation with Pixel Space Laplacian Diffusion Models</b><br>
-<br>
-			Core contributor<br>
-		<b>White Paper</b>.
+			<br>NVIDIA (<b>Yunhao Ge</b>: core contributor)<br>
 		<p></p>
 			<p>[<a href="https://arxiv.org/abs/2411.07126" target="_blank">paper</a>]
 			[<a href="https://research.nvidia.com/labs/dir/edify-image/" target="_blank">project page</a>]
@@ -577,7 +683,7 @@
 <!--			[<a href="https://mp.weixin.qq.com/s/DqYlLVMggNEWuN76-OXJmQ" target="_blank">AI科技评论</a>]-->
 			</p>
 
-			<p><strong style="color:blue">Highlight</strong></p>
+			<p><strong style="color:rgb(20, 115, 204)">Highlight</strong></p>
 		</td>
 	</tr>
 		
@@ -664,7 +770,7 @@
 			<b>Yunhao Ge</b>, Hong-Xing Yu, Cheng Zhao, Yuliang Guo, Xinyu Huang, Liu Ren, Laurent Itti, Jiajun Wu <br>
 		<b>NeurIPS 2023</b> (<em>Advances in Neural Information Processing Systems</em>).
 		<p></p>
-			<p>[<a href="https://arxiv.org/pdf/2312.05277.pdf" target="_blank">paper</a>]
+			<p>[<a href="https://arxiv.org/abs/2312.05277" target="_blank">paper</a>]
 			[<a href="https://github.com/gyhandy/3D-Copy-Paste" target="_blank">code</a>]
 			[<a href="https://gyhandy.github.io/3D-Copy-Paste/" target="_blank">project page</a>]
 <!--			[<a href="https://youtu.be/ZzkpUrK-cRA" target="_blank">video</a>]-->
@@ -1461,7 +1567,7 @@ Applied Optics<br>
 <hr>
 
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=F_s9W3nU5OYqMT1Q8FiSEnLSHBjVFBhCTQoaSexG7Mk'></script>
-<p align="center"><font color="#999999">Last update: April 20, 2025</font></p>
+<p align="center"><font color="#999999">Last update: August 15, 2025</font></p>
 
 
 
