--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <h2><a id="C1" ><font color="#CB4335">About Me</font></a></h2>
 <p>
 	I am a Research Scientist at <a  href="https://research.nvidia.com/labs/gear/">NVIDIA's Generalist Embodied Agent Research</a>, working on <a  href="https://developer.nvidia.com/isaac/gr00t/">Project Groot</a>. I have broad research interests in Multimodal Foundation model and Robotics, with a recent focus on building generally capable agents based on world foundation models. 
-I was previously a Research Scientist at <a  href="https://research.nvidia.com/labs/dir/">NVIDIA's Deep Imagination Research</a>, , where I worked on <a  href="https://www.nvidia.com/en-us/ai/cosmos/">NVIDIA Cosmos</a>. I received my Ph.D. in
+I was previously a Research Scientist at <a  href="https://research.nvidia.com/labs/dir/">NVIDIA's Deep Imagination Research</a>, where I worked on <a  href="https://www.nvidia.com/en-us/ai/cosmos/">NVIDIA Cosmos</a>. I received my Ph.D. in
  Computer Science from <a  href="https://www.cs.usc.edu/">University of Southern California</a> advised by Prof. <a  target="_blank" href=https://scholar.google.com/citations?user=xhUvqK8AAAAJ&hl=en target="_blank" rel="external">Laurent Itti</a>,
 and was honored with the <a  target="_blank" href=https://www.amazon.science/latest-news/amazon-and-usc-name-three-new-ml-fellows target="_blank" rel="external"> Amazon ML Fellowship</a>.
 I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford Vision and Learning Lab (SVL)</a> advised by Prof. <a  target="_blank" href=https://jiajunwu.com/ target="_blank" rel="external">Jiajun Wu</a>.
@@ -222,6 +222,12 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 
 <div style="height:300px;width:fit-content;overflow:auto;background:#FFFFFF;">
 
+	<li>
+		<p>[2025/12/15] We have released <a  target="_blank" href="https://research.nvidia.com/labs/gear/gr00t-n1_6/">Groot N1.6</a>, a open vision-language-action (VLA) model for generalized humanoid robot skills!
+		    </p>
+	<li>
+		<p>[2025/12/15] We have released <a  target="_blank" href="https://luling06.github.io/I-Scene-project/">I-Scene</a>: 3D Instance Models are Implicit Generalizable Spatial Learners!
+		    </p>
 	<li>
 		<p>[2025/06/01] We have released <a  target="_blank" href="https://github.com/nvidia-cosmos/cosmos-predict2">Cosmos Predict2</a>, SOTA world foundation model for robots and autonomous vehicles!
 		    </p>
@@ -498,6 +504,24 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <h2><a id="C3" ><font color="#CB4335">Selected Publications</font></a> [<a href="https://scholar.google.com/citations?hl=en&user=QhjGr4oAAAAJ=en&user=QhjGr4oAAAAJ" style="color:rgb(20, 115, 204)">Google Scholar</a>]</h2>
 
 <table id="tbPublications" width="100%">
+
+	<tr>
+		<td width="306">
+			<img src="pics/i-scene.gif" width="285" style="box-shadow: 4px 4px 8px #888">
+		</td>
+		<td>
+			<b>I-Scene: 3D Instance Models are Implicit Generalizable Spatial Learners</b><br>
+			<br>Lu Ling, <b>Yunhao Ge</b>, Yichen Sheng, Aniket Bera<br>
+					<em>arXiv:2206.09592, 2022.</em>
+		<p></p>
+			<p>[<a href="https://arxiv.org/abs/2512.13683" target="_blank">paper</a>]
+			[<a href="https://luling06.github.io/I-Scene-project/" target="_blank">project page</a>]
+			[<a href="https://github.com/LuLing06/I-Scene-project" target="_blank">code</a>]
+			[<a href="https://github.com/LuLing06/I-Scene-project?tab=readme-ov-file" target="_blank">huggingface</a>]
+			</p>
+		</td>
+	</tr>
+
 	<tr>
 		<td width="306">
 			<video width="285" autoplay loop muted playsinline style="box-shadow: 4px 4px 8px #888">
@@ -1573,7 +1597,7 @@ Applied Optics<br>
 <hr>
 
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=F_s9W3nU5OYqMT1Q8FiSEnLSHBjVFBhCTQoaSexG7Mk'></script>
-<p align="center"><font color="#999999">Last update: August 15, 2025</font></p>
+<p align="center"><font color="#999999">Last update: December 28, 2025</font></p>
 
 
 
