--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 		<p>[2025/12/15] We have released <a  target="_blank" href="https://luling06.github.io/I-Scene-project/">I-Scene</a>: 3D Instance Models are Implicit Generalizable Spatial Learners!
 		    </p>
 	<li>
-		<p>[2025/06/01] We have released <a  target="_blank" href="https://github.com/nvidia-cosmos/cosmos-predict2">Cosmos Predict2</a>, SOTA world foundation model for robots and autonomous vehicles!
-		    </p>
+		<p>[2025/10/28] We have released <a  target="_blank" href="https://research.nvidia.com/labs/dir/cosmos-predict2.5/">Cosmos Predict2.5 and Cosmos-Transfer2.5</a>, an improved world foundation model platform for physical AI!
+			</p>
 	<li>
 		<p>[2025/03/18] We have released <a  target="_blank" href="https://research.nvidia.com/labs/dir/cosmos-transfer1/">Cosmos Transfer1</a>, a world-to-world transfer model designed to bridge the perceptual divide between simulated and real-world environments!
 		    </p>
@@ -438,6 +438,29 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <div style="display: flex; justify-content: space-between; gap: 20px; margin: 30px 0; align-items: flex-start;">
 	<!-- Panel 1: Multimodal Foundation Model for Physical AI -->
 	<div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
+		<h3 style="color: rgb(0, 0, 0); margin: 10px 0 20px 0; font-size: 16px; font-weight: bold;">Generally Capable Agents based on World Foundation Models</h3>
+		<!-- <p style="margin: 5px 0; font-size: 13px; color: #666;">World models for physical AI</p>
+		<p style="margin: 5px 0; font-size: 11px; color: #888;"><strong style="color:rgb(20, 115, 204)">Best AI + Best overall of CES 2025</strong></p> -->
+		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
+			<!-- <strong>Pre-training:</strong>  -->
+			<a target="_blank" href="https://research.nvidia.com/labs/gear/gr00t-n1_6/" style="color:rgb(20, 115, 204)">GR00T N1.6 </a><br>
+
+			<!-- <strong>Post-training:</strong> 
+			<a target="_blank" href="https://research.nvidia.com/labs/dir/cosmos-transfer1/" style="color:rgb(20, 115, 204)">Cosmos-Transfer1 </a> -->
+		</p>
+		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
+			&nbsp;<br>&nbsp;
+		</p>
+		<video width="100%" height="180" controls autoplay loop muted style="margin-bottom: 10px;">
+			<source src="pics/grootn1p6.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+		<!-- <h4 style="color: rgb(20, 115, 204); margin: 10px 0; font-size: 16px;">Cosmos</h4> -->
+	</div>
+
+
+	<!-- Panel 2: Multimodal Foundation Model for Physical AI -->
+	<div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
 		<h3 style="color: rgb(0, 0, 0); margin: 10px 0 20px 0; font-size: 16px; font-weight: bold;">Multimodal Foundation Model for Physical AI</h3>
 		<!-- <p style="margin: 5px 0; font-size: 13px; color: #666;">World models for physical AI</p>
 		<p style="margin: 5px 0; font-size: 11px; color: #888;"><strong style="color:rgb(20, 115, 204)">Best AI + Best overall of CES 2025</strong></p> -->
@@ -459,11 +482,12 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 		<!-- <h4 style="color: rgb(20, 115, 204); margin: 10px 0; font-size: 16px;">Cosmos</h4> -->
 	</div>
 
-	<!-- Panel 2: Physical Scene Generation and Understanding -->
+	<!-- Panel 3: Physical Scene Generation and Understanding -->
 	<div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
 		<h3 style="color: rgb(0, 0, 0); margin: 10px 0 20px 0; font-size: 16px; font-weight: bold;">Physical Scene Generation & Understanding</h3>
 		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
 			<strong>Generation:</strong> 
+			<a target="_blank" href="https://luling06.github.io/I-Scene-project/" style="color:rgb(20, 115, 204)">I-Scene </a>  | 
 			<a target="_blank" href="https://blogs.nvidia.com/blog/real-time-3d-generative-ai-research-siggraph-2024/?ncid=so-twit-353134-vt36&linkId=100000277255797" style="color:rgb(20, 115, 204)">GenUSD </a>  | 
 			<a target="_blank" href="https://arxiv.org/abs/2411.07135" style="color:rgb(20, 115, 204)">Edify3D </a> | 
 			<a target="_blank" href="https://arxiv.org/abs/2411.07126" style="color:rgb(20, 115, 204)">Edify Image </a> | 
@@ -482,7 +506,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 	</div>
 
 	<!-- Panel 3: Controllable Generation -->
-	<div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
+	<!-- <div style="flex: 1; padding: 15px; background-color: #f9f9f9; text-align: left;">
 		<h3 style="color: rgb(0, 0, 0); margin: 10px 0 20px 0; font-size: 16px; font-weight: bold;">Controllable Generation</h3>
 		<p style="margin: 10px 0 5px 0; font-size: 12px; color: #555;">
 			<a target="_blank" href="https://briannlongzhao.github.io/DreamDistribution/" style="color:rgb(20, 115, 204)">DreamDistribution </a> | 
@@ -498,13 +522,31 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 			<source src="pics/dreamdistribution.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-	</div>
+	</div> -->
 </div>
 
 <h2><a id="C3" ><font color="#CB4335">Selected Publications</font></a> [<a href="https://scholar.google.com/citations?hl=en&user=QhjGr4oAAAAJ=en&user=QhjGr4oAAAAJ" style="color:rgb(20, 115, 204)">Google Scholar</a>]</h2>
 
 <table id="tbPublications" width="100%">
 
+	<tr>
+		<td width="306">
+			<video width="285" autoplay loop muted playsinline style="box-shadow: 4px 4px 8px #888">
+				<source src="pics/grootn1p6.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+		</td>
+		<td>
+			<b>GR00T N1.6: An Improved Open Foundation Model for Generalist Humanoid Robots</b><br>
+			<br>NVIDIA (<b>Yunhao Ge</b>: core contributor)<br>
+		<p></p>
+			<p>[<a href="https://research.nvidia.com/labs/gear/gr00t-n1_6/" target="_blank">research blog</a>]
+			[<a href="https://github.com/NVIDIA/Isaac-GR00T" target="_blank">code</a>]
+			[<a href="https://huggingface.co/nvidia/GR00T-N1.6-3B" target="_blank">huggingface</a>]
+			</p>
+		</td>
+	</tr>
+	
 	<tr>
 		<td width="306">
 			<img src="pics/i-scene.gif" width="285" style="box-shadow: 4px 4px 8px #888">
@@ -521,6 +563,35 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 			</p>
 		</td>
 	</tr>
+
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+
+	<tr>
+		<td width="306">
+			<video width="285" autoplay loop muted playsinline style="box-shadow: 4px 4px 8px #888">
+				<source src="pics/cosmos_2p5.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+		</td>
+		<td>
+			<b>Cosmos-Predict2.5 and Cosmos-Transfer2.5: Improved World Simulation with Video Foundation Models for Physical AI</b><br>
+		<br>NVIDIA (<b>Yunhao Ge</b>: core contributor)<br>
+		<p></p>
+		<!-- <b>White Paper</b>. -->
+		<p></p>
+			<p>[<a href="https://arxiv.org/abs/2511.00062" target="_blank">paper</a>]
+			[<a href="https://research.nvidia.com/labs/dir/cosmos-predict2.5/" target="_blank">project page</a>]
+			[<a href="https://github.com/nvidia-cosmos/cosmos-predict2.5" target="_blank">code</a>]
+			[<a href="https://huggingface.co/collections/nvidia/cosmos-predict25" target="_blank">huggingface</a>]
+			</p>
+		</td>
+	</tr>
+
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
 
 	<tr>
 		<td width="306">
