--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 
 				</p>
 				<p> <a href="https://scholar.google.ca/citations?user=QhjGr4oAAAAJ&hl=en"><img src="./pics/google_scholar3.png" height="40px" style="margin-bottom:-3px"></a>
-					<a href="https://github.com/gyhandy"><img src="./pics/github_s.jpg" height="40px" style="margin-bottom:-3px"></a>
                     <a href="https://www.linkedin.com/in/yunhao-ge-720727135"><img src="./pics/LinkedIn2.png" height="40px" style="margin-bottom:-3px"></a>
-                    <a href="files/CV_YunhaoGe.pdf"><img src="./pics/cv2.png" height="40px" style="margin-bottom:-3px"></a>
+					<a href="https://x.com/GeYunhao"><img src="./pics/X.png" height="40px" style="margin-bottom:-3px"></a>
+					<a href="https://github.com/gyhandy"><img src="./pics/github_s.jpg" height="40px" style="margin-bottom:-3px"></a>
+                    <!-- <a href="files/CV_YunhaoGe.pdf"><img src="./pics/cv2.png" height="40px" style="margin-bottom:-3px"></a> -->
 					&nbsp &nbsp
 					<a href="#C1">[<font size="3" color="#CB4335"><b>About Me</b></font>] </a>
 					<a href="#C2">[<font size="3" color="#CB4335"><b>News</b></font>]</a>
@@ -1668,7 +1669,7 @@ Applied Optics<br>
 <hr>
 
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=F_s9W3nU5OYqMT1Q8FiSEnLSHBjVFBhCTQoaSexG7Mk'></script>
-<p align="center"><font color="#999999">Last update: December 28, 2025</font></p>
+<p align="center"><font color="#999999">Last update: December 29, 2025</font></p>
 
 
 
