--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
     <meta name="google-site-verification" content="eoPCGBBxDIK0Ff9Dk_dXsuHMTNzzSEZMbsfO4zriBK8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="keywords" content="Yunhao Ge, NVIDIA, USC ">
-    <meta name="description" content="Yunhao Ge's home page">
+    <meta name="keywords" content="Jinsong Lin, CUHK, HK ">
+    <meta name="description" content="Jinsong Lin's home page">
 <!--    <link href="main.css" media="all" rel="stylesheet">-->
     <link rel="stylesheet" href="jemdoc.css" type="text/css">
     <title>Yunhao (Andy) Ge</title>
@@ -18,11 +18,11 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">
-					<h1>Yunhao (Andy) Ge  &nbsp &nbsp  葛云皓</h1>
-<!--					<h1>葛云皓</h1><h1>-->
+					<h1>Jinsong (Jason) Lin  &nbsp &nbsp  林劲松</h1>
+<!--					<h1>林劲松</h1><h1>-->
 				</div>
 
-				<h3>Research Scientist @ NVIDIA <br><br>
+				<h3>1st Year Phd Student @ CUHK <br><br>
 <!--					Visiting Ph.D. Student @ Stanford University <br><br>-->
 <!--				Student Researcher @ Google Research <br><br>-->
 <!--				Amazon Fellow with Amazon ML Fellowship (2022-2023)-->
