Update email address in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--					University of Southern California <br>-->
 <!--					Rm B06, Hedco Neurosciences Building, 3641 Watt Way, Los Angeles, CA 90089-2520, USA <br>-->
 
-					Email: yunhaog at nvidia dot com
+					Email: jslin.link.cuhk.edu.hk
 
 				</p>
 				<p> <a href="https://scholar.google.ca/citations?user=QhjGr4oAAAAJ&hl=en"><img src="./pics/google_scholar3.png" height="40px" style="margin-bottom:-3px"></a>
