Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 					Email: jslin@link.cuhk.edu.hk
 
 				</p>
-				<p> <a href="https://scholar.google.ca/citations?user=QhjGr4oAAAAJ&hl=en"><img src="./pics/google_scholar3.png" height="40px" style="margin-bottom:-3px"></a>
-                    <a href="https://www.linkedin.com/in/yunhao-ge-720727135"><img src="./pics/LinkedIn2.png" height="40px" style="margin-bottom:-3px"></a>
-					<a href="https://x.com/GeYunhao"><img src="./pics/X.png" height="40px" style="margin-bottom:-3px"></a>
-					<a href="https://github.com/gyhandy"><img src="./pics/github_s.jpg" height="40px" style="margin-bottom:-3px"></a>
+				<p> <a href="https://scholar.google.com/citations?user=IT5CsMYAAAAJ&hl=zh-CN"><img src="./pics/google_scholar3.png" height="40px" style="margin-bottom:-3px"></a>
+                    <a href="https://https://www.linkedin.com/in/jinsong-lin-13a1bb387/"><img src="./pics/LinkedIn2.png" height="40px" style="margin-bottom:-3px"></a>
+					<a href="https://x.com/song_jin55802"><img src="./pics/X.png" height="40px" style="margin-bottom:-3px"></a>
+					<a href="https://github.com/jinsonglin-cuhk"><img src="./pics/github_s.jpg" height="40px" style="margin-bottom:-3px"></a>
                     <!-- <a href="files/CV_YunhaoGe.pdf"><img src="./pics/cv2.png" height="40px" style="margin-bottom:-3px"></a> -->
 					&nbsp &nbsp
 					<a href="#C1">[<font size="3" color="#CB4335"><b>About Me</b></font>] </a>
