--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</p>
 			</td>
 			<td>
-				<img src="pics/Andy3.png" border="0" width="200"><br>
+				<img src="pics/Jason.jpg" border="0" width="200"><br>
 <!--				<img src="pics/Yunhao Ge3.jpg" border="0" width="230"><br>-->
 <!--				<img src="pics/cover.png" border="0" width="540"><br>-->
 			</td>
