--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 	Previously, I was fortunate to intern/work at <a  target="_blank" href=https://research.google/ target="_blank" rel="external"> Google Research</a>, <a  target="_blank" href=https://cloud.google.com/ target="_blank" rel="external"> Google Cloud AI</a>,
 <a  target="_blank" href="https://www.microsoft.com/en-us/research/research-area/computer-vision/?facet%5Btax%5D%5Bmsr-research-area%5D%5B0%5D=13562&sort_by=most-recent" target="_blank" rel="external">Microsoft Research</a>,
 <a  target="_blank" href="https://www.uii-ai.com/en/" target="_blank" rel="external">United Imaging Intelligence</a>,
-	and <a  target="_blank" href="http://flexiv.com/" target="_blank" rel="external">Flexiv Robotics</a>. Before that, I got my M.Sc. degree at Robotics Institute at <a  target="_blank" href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>.
+	and <a  target="_blank" href="http://flexiv.com/" target="_blank" rel="external">Flexiv Robotics</a>. Before that, I got my M.Sc. degree at Robotics Institute at <a  target="_blank" href="https://www.tsinghua.edu.cn/en/index.htm">Shanghai Jiao Tong University</a>.
 
 
 </p>
@@ -164,7 +164,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
 	<a href="https://svl.stanford.edu/"><img src="./pics/stanford.png" height="76px" style="margin-bottom:-9px"></a>&nbsp &nbsp &nbsp
 	<a href="https://www.cs.usc.edu/"><img src="./pics/USC_logo.png" height="60px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
-	<a href="http://en.sjtu.edu.cn/"><img src="./pics/sjtu_logo.png" height="60px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
+	<a href="https://www.tsinghua.edu.cn/en/index.htm"><img src="./pics/Tsinghua.webp" height="60px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
 	<a href="http://www.en.sdu.edu.cn/"><img src="./pics/sdu_logo.jpg" height="62px" style="margin-bottom:-3px"></a>
 </p>
 
