update education pics

--- a/index.html
+++ b/index.html
@@ -150,20 +150,13 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 	Previously, I was fortunate to intern/work at <a  target="_blank" href=https://research.google/ target="_blank" rel="external"> Google Research</a>, <a  target="_blank" href=https://cloud.google.com/ target="_blank" rel="external"> Google Cloud AI</a>,
 <a  target="_blank" href="https://www.microsoft.com/en-us/research/research-area/computer-vision/?facet%5Btax%5D%5Bmsr-research-area%5D%5B0%5D=13562&sort_by=most-recent" target="_blank" rel="external">Microsoft Research</a>,
 <a  target="_blank" href="https://www.uii-ai.com/en/" target="_blank" rel="external">United Imaging Intelligence</a>,
-	and <a  target="_blank" href="http://flexiv.com/" target="_blank" rel="external">Flexiv Robotics</a>. Before that, I got my M.Sc. degree at Robotics Institute at <a  target="_blank" href="https://www.tsinghua.edu.cn/en/index.htm">Shanghai Jiao Tong University</a>.
+	and <a  target="_blank" href="http://flexiv.com/" target="_blank" rel="external">Flexiv Robotics</a>. Before that, I got my M.Sc. degree at Robotics Institute at <a  target="_blank" href="https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>.
 
 
 </p>
 
-<p> <a href="https://www.nvidia.com/en-us/research/"><img src="./pics/nvidia.png" height="70px" style="margin-bottom:-6px"></a>
-	<a href="https://research.google/"><img src="./pics/google_logo.png" height="50px" style="margin-bottom:2px"></a>&nbsp &nbsp &nbsp
-	<!-- <a href="https://trustedai.usc.edu/"><img src="./pics/Amazon-logo.png" height="40px" style="margin-bottom:3px"></a>&nbsp -->
-	<a href="https://www.microsoft.com/en-us/research/"><img src="./pics/microsoft_logo.jfif" height="55px" style="margin-bottom:-1px"></a>&nbsp &nbsp &nbsp
-	<a href="https://www.uii-ai.com/en/"><img src="./pics/UII_logo33.png" height="55px" style="margin-bottom:-1px"></a>&nbsp &nbsp &nbsp &nbsp
-	<a href="http://flexiv.com/"><img src="./pics/flexiv_logo.jfif" height="60px" style="margin-bottom:-3px"></a>
-	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-	<a href="https://svl.stanford.edu/"><img src="./pics/stanford.png" height="76px" style="margin-bottom:-9px"></a>&nbsp &nbsp &nbsp
-	<a href="https://www.cs.usc.edu/"><img src="./pics/USC_logo.png" height="60px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
+<p> <a href="https://cuhk.edu.hk/english/"><img src="./pics/cuhk_logo.jpg" height="100px" style="margin-bottom:-9px"></a>&nbsp &nbsp &nbsp
+	<a href="https://www.cbicr.tsinghua.edu.cn/en/"><img src="./pics/cuicr.jpg" height="100px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
 	<a href="https://www.tsinghua.edu.cn/en/index.htm"><img src="./pics/Tsinghua.webp" height="100px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp
 	<a href="http://www.en.sdu.edu.cn/"><img src="./pics/sdu_logo.jpg" height="100px" style="margin-bottom:-3px"></a>
 </p>
