--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 
 </p>
 
-<p> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+<p> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
 	<a href="https://cuhk.edu.hk/english/"><img src="./pics/cuhk_logo1.jpg" height="125px" style="margin-bottom:-9px"></a>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
 	<a href="https://www.cbicr.tsinghua.edu.cn/en/"><img src="./pics/cuicr.jpg" height="120px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
 	<a href="https://www.tsinghua.edu.cn/en/index.htm"><img src="./pics/Tsinghua.webp" height="120px" style="margin-bottom:-3px"></a>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
