--- a/index.html
+++ b/index.html
@@ -1662,7 +1662,7 @@ Applied Optics<br>
 -->
 <hr>
 
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=F_s9W3nU5OYqMT1Q8FiSEnLSHBjVFBhCTQoaSexG7Mk'></script>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=XFIe5OGEWxVxEKavP3XzA1qr0ow1zGFrfnDXBTW1lQI&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
 <p align="center"><font color="#999999">Last update: December 29, 2025</font></p>
 
 
