--- a/index.html
+++ b/index.html
@@ -1421,27 +1421,24 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 
 <br>
 
-<h2><font color="#CB4335">Scholarships</font></h2>
+<h2><font color="#CB4335">Selected Awards</font></h2>
       <ul>
 		<li>
-          Aug. 2022 <b>Amazon ML Fellowship (2022-2023)</b></li>
+          Sep. 2021 <b>Presidential Scholarship</b>, (highest honor in Shandong University) <strong style="color:blue">top 0.2% in Shandong University</strong></li>
 		<li>
-			Apr. 2022 <b>Annenberg Project Grant for simulating human imagination</b>, awarded annually to 10 PhD students across USC
-			for high impact projects</li>
+          Sep. 2021 <b>Presidential Scholarship</b>, (highest honor in Shandong University) <strong style="color:blue">top 0.2% in Shandong University</strong></li>
+        <li>
+          Sep. 2021 <b>National Scholarship</b>, (highest honor for graduates) <strong style="color:blue">top 2% nationwide</strong></li>
+        <li>
+          Sep. 2020 <b>National Scholarship</b>, (highest honor for undergraduates, top 2% nationwide) </li>
 		<li>
-          Aug. 2019 <b>Annenberg Graduate Fellowship at University of Southern California</b></li>
-        <li>
-          Sep. 2017 <b>National Scholarship(Graduate)</b>, (highest honor for graduates) <strong style="color:blue">top 1% nationwide</strong></li>
-        <li>
-          Sep. 2015 <b>National Scholarship(Undergraduate)</b>, (highest honor for undergraduates, top 2% nationwide) </li>
+          Sep. 2019 &amp; Sep 2020 &amp; Sep 2021</b> <b>First Prize Scholarship</b> (Top 6% in China,three-year continuous)</li>
 		<li>
-          May. 2018 <b>KaiYuan Motivational Scholarship</b> <strong style="color:blue">top 0.5% in Shanghai Jiao Tong University</strong></li>
-        <li>
-          Sep. 2015 <b>Presidential Scholarship</b>, (highest honor in Shandong University) <strong style="color:blue">top 0.2% in Shandong University</strong></li>
-        <li>
-          Sep. 2015 <b>BaoGang Excellent student Scholarship</b>, (4 Places per year at Shandong University) </li>
-		<li>
-          Sep. 2015 &amp; Sep 2014 &amp; Sep 2015</b> <b>First Prize Scholarship</b> (Top 6% in China,three-year continuous)</li>
+			<b>National Scholarship</b>,
+			Ministry of Education of PRC
+			<strong style="color:#CB4335;"> × 2</strong>
+			<span style="float:right;">2021, 2022</span>
+		</li>
       </ul>
 
 <br>
