--- a/index.html
+++ b/index.html
@@ -1356,66 +1356,20 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <br>
 <h2><a id="C4" ><font color="#CB4335">Intern & Work Experience</font></a></h2>
 
-      <h4> Google Research, Los Angeles, USA  (May. 2022 - Dec. 2022) </h4>
+<!--    <img id="school_logo" src="./pics/uII.png">-->
+      <h4> CBICR Tsinghua University, Beijing, China  (Nov. 2023 - Nov. 2024) </h4>
 	  <ul>
-        <li>Position: Student Researcher in <a  target="_blank" href=https://research.google/ target="_blank" rel="external"> Google Research </a></li>
-
-
-		  <li>Supervisor: Dr. <a  target="_blank" href=https://scholar.google.com/citations?user=j64_S3EAAAAJ&hl=en rel="external"> Jiaping Zhao </a>,
-			  Dr. <a  target="_blank" href=https://jessieren.github.io/ target="_blank" rel="external"> Jie Ren </a>,
-			  Dr. <a  target="_blank" href=http://www.gatsby.ucl.ac.uk/~balaji/ target="_blank" rel="external"> Balaji Lakshminarayanan </a>
-        and Prof. <a  target="_blank" href=http://faculty.ucmerced.edu/mhyang/ target="_blank" rel="external"> Ming-Hsuan Yang</a></li>
-        <li>Project: Improving Zero-shot Generalization and Robustness of Multi-modal Models --> <b>Accepted by CVPR 2023</b> </li>
-    </ul>
-
-      <h4> Google Cloud AI, Mountain View, USA  (Aug. 2021 - May 2022) </h4>
-	  <ul>
-        <li>Position: Student Researcher in <a  target="_blank" href="https://cloud.google.com/" target="_blank" rel="external">Google Cloud AI</a></li>
-		  <li>Supervisor: Dr. <a  target="_blank" href=https://sercanarik.com/ rel="external"> Sercan Arik </a>
-        and Dr. <a  target="_blank" href=https://sites.google.com/view/jinsungyoon target="_blank" rel="external"> Jinsung Yoon </a></li>
-        <li>Project: Causal Explainable AI --> <b>Accepted by TMLR</b> </li>
-    </ul>
-
-      <h4> Microsoft Research, Redmond, USA  (May. 2021 - Aug. 2021) </h4>
-	  <ul>
-        <li>Position: Research Intern in <a  target="_blank" href="https://www.microsoft.com/en-us/research/research-area/computer-vision/?facet%5Btax%5D%5Bmsr-research-area%5D%5B0%5D=13562&sort_by=most-recent" target="_blank" rel="external">Microsoft Research Computer Vision Group</a></li>
-		  <li>Supervisor: Dr. <a  target="_blank" href=http://vibhavvineet.info/ target="_blank" rel="external"> Vibhav Vineet </a>
-            and Dr. <a  target="_blank" href=https://neelj.com/ target="_blank" rel="external"> Neel Joshi </a></li>
-        <li>Project: On-demand training data generation with Neural Rendering --> <b>Accepted by ECCV 2022</b> </li>
+        <li>Position: Research Inter in <a  target="_blank" href="https://www.cbicr.tsinghua.edu.cn/en/" target="_blank" rel="external">CBICR Tsinghua University</a></li>
+        <li>Supervisor: Dr.<a  target="_blank" href=https://www.linkedin.com/in/tao-yi-wang/?locale=en_US target="_blank" rel="external"> Taoyi Wang</a> and
+				Pro. <a  target="_blank" href=https://lyh983012.github.io/ target="_blank" rel="external"> Yihan Lin</a>
+        <li>Project: Visual odometry and mapping in HDR dynamic scenes besed on <a  target="_blank" href=https://www.nature.com/articles/s41586-024-07358-4 target="_blank" rel="external"> Tianmouc Chip</a> </li>
     </ul>
 
 <!--    <img id="school_logo" src="./pics/uII.png">-->
-      <h4> UII America, Inc, Boston, USA  (May. 2020 - Aug. 2020) </h4>
+      <h4> Beijing Aimagine CARE Co., Ltd., Beijing, China  (Jul. 2022 - Aug. 2022) </h4>
 	  <ul>
-        <li>Position: Research Intern in <a  target="_blank" href="https://www.uii-ai.com/en/" target="_blank" rel="external">UII America</a></li>
-        <li>Supervisor: Dr. <a  target="_blank" href=http://wuziyan.com/ target="_blank" rel="external"> Ziyan Wu </a>
-            and Dr. <a  target="_blank" href=https://karanams.github.io/ target="_blank" rel="external"> Srikrishna Karanam </a></li>
-        <li>Project: Explain reasoning logic of NN --> <b>Accepted by CVPR 2021</b> </li>
-    </ul>
-
-<!--    <img id="school_logo" src="./pics/Flexiv.png">-->
-          <!--<h4> The University of North Carolina at Chapel Hill, NC, USA  & <br> Shanghai United ImagingIntelligence Co., Ltd, China  (Jun. 2018 - Nov. 2018)</br> </h4>-->
-          <h4> Flexiv Ltd, Shanghai, China  (May. 2019 - Aug. 2019) </h4>
-          <ul>
-            <li>Position: Computer Vision Engineer in <a  target="_blank" href="http://flexiv.com/" target="_blank" rel="external">Flexiv Robotics</a></li>
-            <li>Supervisor: Prof.<a  target="_blank" href=http://webcache.googleusercontent.com/search?q=cache:http://mvig.sjtu.edu.cn/ target="_blank" rel="external"> Cewu Lu</a> and
-				Dr. <a  target="_blank" href=https://www.linkedin.com/in/shuyun-chung-67b5337a/ target="_blank" rel="external"> Shuyun Chong</a>
-			</li>
-            <li>Project: Robotics adaptive massage based on human pose detection and tracking </li>
-            <br/>
-            <br/>
-            <td width="306">
-            <img src="pics/masage.gif" width="285px" height= "180px" style="box-shadow: 4px 4px 8px #888">
-            </td>
-      </ul>
-
-<!--    <img id="school_logo" src="./pics/uII.png">-->
-      <h4> United Imaging Intelligence Co., Ltd, Shanghai, China  (Jun. 2018 - Apr. 2019) </h4>
-	  <ul>
-        <li>Position: Research Intern in <a  target="_blank" href="https://www.uii-ai.com/en/" target="_blank" rel="external">United Imaging Intelligence</a></li>
-        <li>Supervisor: Prof.<a  target="_blank" href=https://scholar.google.com/citations?user=v6VYQC8AAAAJ&hl=zh-CN target="_blank" rel="external"> Dinggang Shen</a>
-        and Dr. <a  target="_blank" href=https://scholar.google.com/citations?user=INL-unYAAAAJ&hl=en target="_blank" rel="external"> Shu Liao </a></li>
-        <li>Project: Unpaired MR to CT image synthesis --> <b>Accepted by ISBI 2019 and MICCAI 2019</b>  </li>
+        <li>Position: Embedded Software Engineer in <a  target="_blank" href="https://www.aimagine-care.com.cn/cn" target="_blank" rel="external">Aimagine CARE</a></li>
+        <li>Project: Synchronized microscopic image acquisition using high-precision motion mechanisms</b>  </li>
     </ul>
 
 
@@ -1424,21 +1378,21 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <h2><font color="#CB4335">Selected Awards</font></h2>
       <ul>
 		<li>
-          Sep. 2021 <b>Presidential Scholarship</b>, (highest honor in Shandong University) <strong style="color:blue">top 0.2% in Shandong University</strong></li>
+          Aug. 2025 <b>Postgraduate Studentship Award</b>,  (awarded by The Chinese University of Hong Kong)</li>		
 		<li>
-          Sep. 2021 <b>Presidential Scholarship</b>, (highest honor in Shandong University) <strong style="color:blue">top 0.2% in Shandong University</strong></li>
+          Sep. 2024 <b>Graduate Comprehensive Scholarship</b>,  (Top 10% in Tsinghua University)</li>
+		<li>
+          Apr. 2022 <b>Outstanding Graduate of Shandong</b>,  by Shandong Municipal Education Commission</li>
+		<li>
+          Dec. 2021 <b>Outstanding Student of Shandong</b>,  by Shandong Municipal Education Commission</li>
+		<li>
+          Oct. 2021 <b>Presidential Scholarship</b>, (highest honor in Shandong University) <strong style="color:blue">top 0.2% in Shandong University</strong></li>
         <li>
-          Sep. 2021 <b>National Scholarship</b>, (highest honor for graduates) <strong style="color:blue">top 2% nationwide</strong></li>
+          Sep. 2021 <b>National Scholarship</b>, <strong style="color:blue">top 2% nationwide</strong></li>
         <li>
-          Sep. 2020 <b>National Scholarship</b>, (highest honor for undergraduates, top 2% nationwide) </li>
+          Sep. 2020 <b>National Scholarship</b>, <strong style="color:blue">top 2% nationwide</strong></li>
 		<li>
           Sep. 2019 &amp; Sep 2020 &amp; Sep 2021</b> <b>First Prize Scholarship</b> (Top 6% in China,three-year continuous)</li>
-		<li>
-			<b>National Scholarship</b>,
-			Ministry of Education of PRC
-			<strong style="color:#CB4335;"> × 2</strong>
-			<span style="float:right;">2021, 2022</span>
-		</li>
       </ul>
 
 <br>
@@ -1461,23 +1415,15 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <!--<br>-->
 
 
-<h2><font color="#CB4335">Academic Service</font></h2>
-Reviewer of the following conferences/journals:
-<br>
-<br>
-NeurIPS 2023, 2022, 2021<br>
-CVPR 2023, 2022<br>
-ECCV 2022<br>
-ICCV 2023, 2021<br>
-ICLR 2023, 2022<br>
-ICML 2022<br>
-WACV 2023<br>
+<h2><font color="#CB4335">Selected Service</font></h2>
+<b>Academic Reviewer</b><br>
+Engineering Science & Technology(EST)<br>
+IROS workshop<br>
+<b>Teaching Assistant</b><br>
 
-
-<!--2021 IEEE CVPR WORKSHOP ON FAIR, DATA EFFICIENT AND TRUSTED COMPUTER VISION<br>-->
-IEEE Transactions on Medical Imaging (TMI)<br>
-IEEE Access<br>
-Applied Optics<br>
+<b>Student Leadership</b><br>
+Vice Chair, Graduate Student Council (Department of Mechanical Engineering, Tsinghua University), 2023–2024
+Head of Student Social Practice (Department of Mechanical Engineering, Tsinghua University), 2023–2024
 
 <br>
 
