--- a/index.html
+++ b/index.html
@@ -1417,13 +1417,18 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 
 <h2><font color="#CB4335">Selected Service</font></h2>
 <b>Academic Reviewer</b><br>
+<br>
 Engineering Science & Technology(EST)<br>
 IROS workshop<br>
+<br>
 <b>Teaching Assistant</b><br>
+<br>
 
+<br>
 <b>Student Leadership</b><br>
-Vice Chair, Graduate Student Council (Department of Mechanical Engineering, Tsinghua University), 2023–2024
-Head of Student Social Practice (Department of Mechanical Engineering, Tsinghua University), 2023–2024
+<br>
+Vice Chair, Graduate Student Council (Department of Mechanical Engineering, Tsinghua University), 2023–2024<br>
+Head of Student Social Practice (Department of Mechanical Engineering, Tsinghua University), 2023–2024<br>
 
 <br>
 
