--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <!--<br>-->
 
 
-<h2><font color="#CB4335">Selected Service</font></h2>
+<h2><font color="#CB4335">Selected Services</font></h2>
 <b>Academic Reviewer</b><br>
 <br>
 Engineering Science & Technology(EST)<br>
