--- a/index.html
+++ b/index.html
@@ -1427,8 +1427,8 @@ IROS workshop<br>
 <br>
 <b>Student Leadership</b><br>
 <br>
-Vice Chair, Graduate Student Council (Mechanical Engineering, THU), 2023–2024<br>
-Head of Student Social Practice (Mechanical Engineering, THU), 2023–2024<br>
+Vice Chair, Graduate Student Council (ME, THU), 2023–2024<br>
+Head of Graduate Student Practice & Outreach (ME, THU), 2023–2024<br>
 
 <br>
 
