--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 	  <ul>
         <li>Position: Research Inter in <a  target="_blank" href="https://www.cbicr.tsinghua.edu.cn/en/" target="_blank" rel="external">CBICR</a>, Tsinghua University</li>
         <li>Supervisor: Dr.<a  target="_blank" href=https://www.linkedin.com/in/tao-yi-wang/?locale=en_US target="_blank" rel="external"> Taoyi Wang</a> and
-				Pro. <a  target="_blank" href=https://lyh983012.github.io/ target="_blank" rel="external"> Yihan Lin</a>
+				Pro. <a  target="_blank" href=https://lyh983012.github.io/ target="_blank" rel="external"> Yihan Lin</a></li>
         <li>Project: Visual odometry and mapping in HDR dynamic scenes besed on <a  target="_blank" href=https://www.nature.com/articles/s41586-024-07358-4 target="_blank" rel="external"> Tianmouc Chip</a> </li>
     </ul>
 
@@ -1416,19 +1416,24 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 
 
 <h2><font color="#CB4335">Selected Services</font></h2>
-<b>Academic Reviewer</b><br>
-<br>
-Engineering Science & Technology(EST)<br>
-IROS workshop<br>
-<br>
-<b>Teaching Assistant</b><br>
-<br>
+      <h4> Academic Reviewer </h4>
+	  <ul>
+        <li>Engineering Science & Technology(EST)</li>
+        <li>IROS Workshop</li>
+        <li>Project: Visual odometry and mapping in HDR dynamic scenes besed on <a  target="_blank" href=https://www.nature.com/articles/s41586-024-07358-4 target="_blank" rel="external"> Tianmouc Chip</a> </li>
+    </ul>
 
-<br>
-<b>Student Leadership</b><br>
-<br>
-Vice Chair, Graduate Student Council (ME, THU), 2023–2024<br>
-Head of Graduate Student Practice & Outreach (ME, THU), 2023–2024<br>
+      <h4> Teaching Assistant </h4>
+	  <ul>
+        <li></li>
+		<li></li>
+    </ul>
+
+      <h4> Academic Reviewer </h4>
+	  <ul>
+        <li>Vice Chair, Graduate Student Council (ME, THU), 2023–2024</li>
+        <li>Head of Graduate Student Practice & Outreach (ME, THU), 2023–2024</li>
+    </ul>
 
 <br>
 
