--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <!--    <img id="school_logo" src="./pics/uII.png">-->
       <h4> CBICR, Tsinghua University, Beijing, China  (Nov. 2023 - Nov. 2024) </h4>
 	  <ul>
-        <li>Position: Research Inter in <a  target="_blank" href="https://www.cbicr.tsinghua.edu.cn/en/" target="_blank" rel="external">CBICR</a>, Tsinghua University</li>
+        <li>Position: Research Intern in <a  target="_blank" href="https://www.cbicr.tsinghua.edu.cn/en/" target="_blank" rel="external">CBICR</a>, Tsinghua University</li>
         <li>Supervisor: Dr.<a  target="_blank" href=https://www.linkedin.com/in/tao-yi-wang/?locale=en_US target="_blank" rel="external"> Taoyi Wang</a> and
 				Pro. <a  target="_blank" href=https://lyh983012.github.io/ target="_blank" rel="external"> Yihan Lin</a></li>
         <li>Project: Visual odometry and mapping in HDR dynamic scenes besed on <a  target="_blank" href=https://www.nature.com/articles/s41586-024-07358-4 target="_blank" rel="external"> Tianmouc Chip</a> </li>
