--- a/index.html
+++ b/index.html
@@ -1428,7 +1428,7 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 		<li></li>
     </ul>
 
-      <h4> Academic Reviewer </h4>
+      <h4> Student Leadership </h4>
 	  <ul>
         <li>Vice Chair, Graduate Student Council (ME, THU), 2023–2024</li>
         <li>Head of Graduate Student Practice & Outreach (ME, THU), 2023–2024</li>
