--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
 <h2><a id="C1" ><font color="#CB4335">About Me</font></a></h2>
 <p>
-	I am a Research Scientist at <a  href="https://research.nvidia.com/labs/gear/">NVIDIA's Generalist Embodied Agent Research</a>, working on <a  href="https://developer.nvidia.com/isaac/gr00t/">Project Groot</a>. I have broad research interests in Multimodal Foundation model and Robotics, with a recent focus on building generally capable agents based on world foundation models. 
+	<!-- I am a Research Scientist at <a  href="https://research.nvidia.com/labs/gear/">NVIDIA's Generalist Embodied Agent Research</a>, working on <a  href="https://developer.nvidia.com/isaac/gr00t/">Project Groot</a>. I have broad research interests in Multimodal Foundation model and Robotics, with a recent focus on building generally capable agents based on world foundation models. 
 I was previously a Research Scientist at <a  href="https://research.nvidia.com/labs/dir/">NVIDIA's Deep Imagination Research</a>, where I worked on <a  href="https://www.nvidia.com/en-us/ai/cosmos/">NVIDIA Cosmos</a>. I received my Ph.D. in
  Computer Science from <a  href="https://www.cs.usc.edu/">University of Southern California</a> advised by Prof. <a  target="_blank" href=https://scholar.google.com/citations?user=xhUvqK8AAAAJ&hl=en target="_blank" rel="external">Laurent Itti</a>,
 and was honored with the <a  target="_blank" href=https://www.amazon.science/latest-news/amazon-and-usc-name-three-new-ml-fellows target="_blank" rel="external"> Amazon ML Fellowship</a>.
-I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford Vision and Learning Lab (SVL)</a> advised by Prof. <a  target="_blank" href=https://jiajunwu.com/ target="_blank" rel="external">Jiajun Wu</a>.
+I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford Vision and Learning Lab (SVL)</a> advised by Prof. <a  target="_blank" href=https://jiajunwu.com/ target="_blank" rel="external">Jiajun Wu</a>. -->
 <!-- <p>
 		I am a Research Scientist at <a  href="https://research.nvidia.com/labs/dir/">NVIDIA's Deep Imagination Research group</a>. I have broad research interests in Computer Vision and Robotics, with a recent focus on building multimodal foundation models for physical AI. 
 	My research has been integrated into several products for NVIDIA, including <a  href="https://www.nvidia.com/en-us/ai/cosmos/">NVIDIA Cosmos</a> and <a  href="https://www.nvidia.com/en-us/gpu-cloud/edify/">NVIDIA Edify</a>. I received my Ph.D. in
