--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@ I was a Visiting Ph.D. Student at <a  href="https://svl.stanford.edu/">Stanford 
 <!--	and Dr. <a  target="_blank" href=http://wuziyan.com/ target="_blank" rel="external">Ziyan Wu</a> (<a  target="_blank" href="https://www.uii-ai.com/en/" target="_blank" rel="external">UII America</a>).-->
 
 
-	Previously, I was fortunate to intern/work at <a  target="_blank" href=https://research.google/ target="_blank" rel="external"> Google Research</a>, <a  target="_blank" href=https://cloud.google.com/ target="_blank" rel="external"> Google Cloud AI</a>,
+	<!-- Previously, I was fortunate to intern/work at <a  target="_blank" href=https://research.google/ target="_blank" rel="external"> Google Research</a>, <a  target="_blank" href=https://cloud.google.com/ target="_blank" rel="external"> Google Cloud AI</a>,
 <a  target="_blank" href="https://www.microsoft.com/en-us/research/research-area/computer-vision/?facet%5Btax%5D%5Bmsr-research-area%5D%5B0%5D=13562&sort_by=most-recent" target="_blank" rel="external">Microsoft Research</a>,
 <a  target="_blank" href="https://www.uii-ai.com/en/" target="_blank" rel="external">United Imaging Intelligence</a>,
-	and <a  target="_blank" href="http://flexiv.com/" target="_blank" rel="external">Flexiv Robotics</a>. Before that, I got my M.Sc. degree at Robotics Institute at <a  target="_blank" href="https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>.
+	and <a  target="_blank" href="http://flexiv.com/" target="_blank" rel="external">Flexiv Robotics</a>. Before that, I got my M.Sc. degree at Robotics Institute at <a  target="_blank" href="https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. -->
 
 
 </p>
